Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1507

Impala hits DCHECK with low but reasonable query mem_limit.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.1
    • Impala 2.1
    • None
    • None

    Description

      Run TPCH-Q1 on a mini cluster with a query mem_limit=100m.
      You'll hit this DCHECK:

      ...
      F1121 13:40:48.299549  2483 partitioned-aggregation-node.cc:538] Check failed: !aggregated_row_stream->using_small_buffers()
      ...
      

      Attachments

        Activity

          People

            ippokratis Ippokratis Pandis
            alex.behm Alexander Behm
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: